# Image-Processsing-GUI

./: .gitignore  BackendWrapper.cpp  CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  ImageEdgeDetection.cpp  ImageEdgeDetection.h  ImageFilter.cpp  ImageFilter.h  ImageIO.cpp  ImageIO.h  ImageMorphology.cpp  ImageMorphology.h  ImageUtils.cpp  ImageUtils.h  IntensityTransformations.cpp  IntensityTransformations.h  README.md  imageprocessingbackend.cpp  imageprocessingbackend.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  styles.qss
